basic E-commerce site

--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoppyji</title>
-    <link rel ="stylesheet" hreg="style.css"
-    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>shoppyji</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Shoppyji</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    
+  <div class="header">
+    <nav>
+      <h1>shoppyji</h1>
+      <ul>
+        <li>Home |</li>
+        <li>products |</li>
+        <li>About us |</li>
+        <li>contact us</li>
+      </ul>
+    </nav>
+  </div>
+  <div class="searchbar">
+    <input placeholder="search">
+  </div>
+  <div class="products">
+    <div class="box">
+      <img src="image/s1.jpg"width="300px"  height="300px">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, consequuntur laudantium! Perspiciatis cum mollitia fugit deserunt ipsam, ea nemo. Quaerat.</p>
+    </div>
+    <div class="box">
+      <img src="image/s2.jpg" width="300px"  height="300px" >
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, consequuntur laudantium! Perspiciatis cum mollitia fugit deserunt ipsam, ea nemo. Quaerat.</p>
+    </div>
+    <div class="box">
+      <img src="image/s3.jpg"width="300px"  height="300px">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, consequuntur laudantium! Perspiciatis cum mollitia fugit deserunt ipsam, ea nemo. Quaerat.</p>
+    </div>
+  </div>
+  <div class="about">
+    <h1 style="text-align: center;">About us</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eaque consequatur accusantium reprehenderit recusandae, corrupti quae nemo rem, harum cupiditate voluptatibus expedita minima quis quasi! Dignissimos harum reprehenderit optio nihil debitis molestias exercitationem laborum, amet, distinctio assumenda temporibus modi quia maxime aperiam obcaecati tempora vero est deleniti a aspernatur. Illum, dolorem commodi suscipit in corporis labore aut nihil consectetur praesentium consequatur doloribus distinctio quam dicta, numquam, totam voluptate dolorum optio quaerat corrupti velit earum consequuntur impedit. Soluta, sed laborum incidunt iste rerum odio repudiandae amet. Laborum molestias nihil porro fugit illum. In eos assumenda excepturi recusandae ad atque nulla officia inventore, tempore consectetur fugiat sequi ipsa pariatur nesciunt, aliquam vero cumque dolore expedita tempora soluta perspiciatis voluptatibus debitis! Esse at aspernatur eos, provident eaque ipsum corporis tempore ratione distinctio non et quia soluta, vel nostrum odio odit quam quod quaerat incidunt! Culpa dolorum accusantium corporis obcaecati sit, doloremque, quibusdam libero aliquam deleniti illo mollitia. Sed, iure saepe. Dolor, tempore. Dolorum asperiores sit ipsum error porro sapiente consequuntur consequatur fugit magnam.</p>
+  </div>
+
+  <div class="contact">
+    <p>Contact<br>+91 9361159033<br>shoppiji@gmail.com<br><br></p>
+    <p style="color: gray; margin-top: 20px;font-size: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem temporibus voluptate vel incidunt. Quaerat placeat pariatur rerum dolores molestiae cum quam animi corporis nesciunt nulla quibusdam officia assumenda quod, illum consectetur incidunt itaque ex tempore temporibus asperiores a culpa blanditiis? Consequatur excepturi facere totam incidunt quos expedita, quidem commodi eveniet.</p>
+  </div>
+
+
+  
 </body>
 </html>
